@@ -257,7 +257,7 @@ to print the corresponding values, or T for all of them.")
                    normal-printout)
                 (push pack accessible-packs)))))
         (when accessible-packs
-          (format stream (TEXT ", is accessible in ~:d package~:*~[~;~:;s~] ~{~A~^, ~}")
+          (format stream (TEXT ", is accessible in ~:d package~:p ~{~A~^, ~}")
                   (length accessible-packs)
                   (sort (mapcar #'package-name accessible-packs)
                         #'string<))))
@@ -371,7 +371,7 @@ to print the corresponding values, or T for all of them.")
                 (package-name obj))
         (let ((nicknames (package-nicknames obj)))
           (when nicknames
-            (format stream (TEXT ". It has ~:d nickname~:*~[~;~:;s~] ~{~A~^, ~}")
+            (format stream (TEXT ". It has ~:d nickname~:p ~{~A~^, ~}")
                     (length nicknames) nicknames)))
         (format stream (TEXT "."))
         (let ((use-list (package-use-list obj))
@@ -379,19 +379,19 @@ to print the corresponding values, or T for all of them.")
           (terpri stream)
           (format stream (TEXT "It "))
           (when use-list
-            (format stream (TEXT "imports the external symbols of ~:d package~:*~[~;~:;s~] ~{~A~^, ~} and ")
+            (format stream (TEXT "imports the external symbols of ~:d package~:p ~{~A~^, ~} and ")
                     (length use-list)
                     (mapcar #'package-name use-list)))
           (let ((L nil) (count 0)) ; maybe list all exported symbols
             (do-external-symbols (s obj) (push s L) (incf count))
             (format stream
-                    (TEXT "exports ~[no symbols~:;~:*~:d symbol~:*~[~;~:;s~]~]")
+                    (TEXT "exports ~[no symbols~:;~:*~:d symbol~:p~]")
                     count)
             (when (zerop *describe-nesting*)
               (format stream (TEXT "~{ ~S~^,~}")
                       (sort L #'string< :key #'symbol-name))))
           (if used-by-list
-            (format stream (TEXT " to ~:d package~:*~[~;~:;s~] ~{~A~^, ~}")
+            (format stream (TEXT " to ~:d package~:p ~{~A~^, ~}")
                     (length used-by-list)
                     (mapcar #'package-name used-by-list))
             (format stream (TEXT ", but no package uses these exports")))
